Update journal and front page content

--- a/_posts/2021-11-04-journal.md
+++ b/_posts/2021-11-04-journal.md
@@ -9,7 +9,7 @@ I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" tar
 
 **1. Wallets**
 - wallets don't store coins but store one or more private keys which prove ownership of an address
-- coinbase != coinbase wallet; coinbase stores your private key but it looks like they store it very securely
+- coinbase != coinbase wallet; coinbase stores your private key, coinbase wallet has the customer store their private key
 - a wallet can be a piece of paper, software, or hardware
 
 **2. Ethereum 2.0**
