Complete building blockchain app post

--- a/_posts/2021-11-03-journal.md
+++ b/_posts/2021-11-03-journal.md
@@ -3,7 +3,7 @@ layout: post
 author: lynn
 tags: journal blockchain cryptocurrency
 ---
-I spent this morning's [deep work](https://www.calnewport.com/books/deep-work/) session continuing my studies on blockchain technology. Here are the 5 main things I learned:
+I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" target="_blank">deep work</a> session continuing my studies on blockchain technology. Here are the 5 main things I learned:
 
 **1. Interplanetary File System (IPFS)**
 - content addressing vs location addressing
