--- a/_posts/2021-11-03-journal.md
+++ b/_posts/2021-11-03-journal.md
@@ -3,6 +3,21 @@ layout: post
 author: lynn
 tags: journal blockchain cryptocurrency
 ---
+
+* T0C
+{:toc}
+
+---
+<!--
+<a href="" target="_blank"></a>
+
+&nbsp;
+
+<figure><center><img src="/assets/images/" style="width:100%">
+<figcaption></figcaption></center></figure><br>
+-->
+
+## TIL
 I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" target="_blank">deep work</a> session continuing my studies on blockchain technology. Here are the 5 main things I learned:
 
 **1. Interplanetary File System (IPFS)**
@@ -16,7 +31,7 @@ I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" tar
 
 **3. Crypto Cities**
 - it would be cool to live in a crypto city built from scratch
-- Vitalik Buterin (co-founder of Ethereum) has a [blog post](https://vitalik.ca/general/2021/10/31/cities.html) that dives into its potential and provides better information than I ever could (btw I'm a fangirl of Vitalik after doing 1 hour of research on him, yes that's all it takes)
+- Vitalik Buterin (co-founder of Ethereum) has a <a href="https://vitalik.ca/general/2021/10/31/cities.html" target="_blank">blog post</a> that dives into its potential and provides better information than I ever could (btw I'm a fangirl of Vitalik after doing 1 hour of research on him, yes that's all it takes)
 
 **4. Ethereum 2.0**
 - proof of stake and sharding
@@ -29,5 +44,7 @@ I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" tar
 - claims to be the anonymous founder of Bitcoin (Satoshi Nakamoto)
 
 ---
+
+## General
 
 The day flew by setting up the foundations for this website. It's one of those things where you spend so much time and have little to show for it. But now with the skeleton configured and a general understanding of jekyll, liquid, and a bit of css; I can hopefully begin to post regularly with little effort and time 😊
