--- a/_posts/2021-11-04-journal.md
+++ b/_posts/2021-11-04-journal.md
@@ -4,6 +4,20 @@ author: lynn
 tags: journal blockchain ethereum dapp
 ---
 
+* T0C
+{:toc}
+
+---
+<!--
+<a href="" target="_blank"></a>
+
+&nbsp;
+
+<figure><center><img src="/assets/images/" style="width:100%">
+<figcaption></figcaption></center></figure><br>
+-->
+
+## TIL
 I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" target="_blank">deep work</a>
  session studying more on blockchain technology. I learned **so** many things:
 
@@ -41,6 +55,8 @@ I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" tar
     - dApps are immutable so there normally isn't an iterative development process; once a dApp is deployed, there's no going back to fix a bug or add a new feature
 
 ---
+
+## General
 
 Every week day morning, I wake up at 4:45am. This gives me dedicated time to prepare for my day, have a nice deep work session, and go for a walk before I need to start my 8-5. I love walking because it's extremely good for you and I get to learn new things through a podcast, audio book, or youtube video. I also really enjoy listening to nothing during my walks which is what I did today. By listening to nothing, I'm not bombarding my brain with new information. It allows me to digest the information I've been taking in, form my own thoughts and ideas, and allows me to think creatively. 
 
