Add post navigation and more css updates

--- a/_posts/2021-11-09-journal.md
+++ b/_posts/2021-11-09-journal.md
@@ -49,6 +49,6 @@ I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" tar
 
 ## General
 
-I really need to come up with an idea to present for my work's braintrust. I'm clearly interested and dedicating a decent amount of time towards blockchain but that's not something I can really share. Is there a way I can tie it into cloud engineering? They're pretty much opposites...
+I really need to come up with an idea to present for my work's braintrust. I'm clearly interested in blockchain and dedicating a decent amount of time towards it but that's not something I can really share. Is there a way I can tie it into cloud engineering? They're pretty much opposites...
 
 I suppose I can run <a href="https://geth.ethereum.org/" target="_blank">Geth</a> as a docker container and then do some DevOps with it. I'm not even sure what that entails or if it's possible because I'm still really new to this. Only one way to find out!
