--- a/_posts/2021-11-03-journal.md
+++ b/_posts/2021-11-03-journal.md
@@ -18,7 +18,7 @@ tags: journal blockchain cryptocurrency
 -->
 
 ## TIL
-I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" target="_blank">deep work</a> session continuing my studies on blockchain technology. Here are the 5 main things I learned:
+I spent this morning's <a href="https://www.calnewport.com/books/deep-work/" target="_blank">deep work</a> session learning about blockchain technology. Here are the 5 main things I took away:
 
 **1. Interplanetary File System (IPFS)**
 - content addressing vs location addressing
