Add certificate to post

--- a/_posts/2021-11-15-journal.md
+++ b/_posts/2021-11-15-journal.md
@@ -85,6 +85,8 @@ I learned a bit about the EOSIO blockchain platform over the weekend.
   - I'm guessing the block producers get all their money from block rewards but besides the original 21, what's the incentive for everyone else running in the network? 🤔
   - also investigation for another time
 
+My <a href="https://training.eos.io/certificates/wunmifkjqr" target="_blank">certificate</a>.
+
 ---
 
 
