Add tags to posts

--- a/_posts/2021-11-03-journal.md
+++ b/_posts/2021-11-03-journal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: lynn
-tags: journal blockchain cryptocurrency
+tags: journal blockchain cryptocurrency ethereum
 ---
 
 * T0C
