add tag categorization

--- a/_posts/2021-11-22-journal.md
+++ b/_posts/2021-11-22-journal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: lynn
-tags: journal solidity security metaverse architecture design
+tags: journal solidity security architecture
 ---
 
 * T0C
