--- a/_posts/2021-11-30-journal.md
+++ b/_posts/2021-11-30-journal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: lynn
-tags: journal hacker cryptomining security cryptozombies go 
+tags: journal security golang
 ---
 
 * T0C
