--- a/_posts/2021-12-03-journal.md
+++ b/_posts/2021-12-03-journal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: lynn
-tags: journal adventofcode anthos fellow certification go
+tags: journal anthos certification
 ---
 
 * T0C
